--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/supabase-js": "^2.42.0",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.3",
     "react": "^18",
